# Fruit_Merge--co-author

./: .gitignore  CMakeLists.txt
include/: EventHandler.h  Game.h  GameState.h  RankingManager.h  SoundManager.h
include/core/: Ball.h  Board.h  Physics.h
include/fruits/: Fruit.h
include/graphics/: Cloud.h  ExitWindow.h  FinalWindow.h  GameWindow.h  Menu.h  Progressbar.h  UiManager.h
source/: EventHandler.cpp  Game.cpp  RankingManager.cpp  SoundManager.cpp  main.cpp
source/core/: Ball.cpp  Board.cpp  Physics.cpp
source/fruits/: Fruit.cpp
source/graphics/: Cloud.cpp  ExitWindow.cpp  FinalWindow.cpp  GameWindow.cpp  Menu.cpp  Progressbar.cpp  UiManager.cpp
tests/: CMakeLists.txt
